trim whitespace in jet templates

--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -1,5 +1,5 @@
-{{ extends "layout/default" }}
-{{ block body() }}
+{{- extends "layout/default" }}
+{{- block body() }}
 <div class="container">
   <h1>About PixivFE</h1>
   <p>PixivFE is a Pixiv frontend. It lets you enjoy art on Pixiv without needless interruption.</p>
@@ -25,4 +25,4 @@
     </li>
   </ul>
 </div>
-{{ end }}
+{{- end }}
