--- a/assets/views/components/thumbnail-tt.jet.html
+++ b/assets/views/components/thumbnail-tt.jet.html
@@ -1,4 +1,4 @@
-{{ target := CookieList["pixivfe-ThumbnailToNewTab"] }}
+{{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
 <div class="artwork-title">
   <a target="{{ target }}" href="/artworks/{{ .ID }}#checkpoint"> {{ .Title }} </a>
 </div>
