--- a/assets/views/pixivision_index.jet.html
+++ b/assets/views/pixivision_index.jet.html
@@ -1,21 +1,21 @@
-{{ extends "layout/default" }}
-{{ block body() }}
+{{- extends "layout/default" }}
+{{- block body() }}
 <div class="container">
 	<div class="vision-container">
-		{{ range _, article := .Data }}
+		{{- range _, article := .Data }}
 		<div class="vision-preview vision-preview-large">
 			<div class="vision-thumbnail">
 				<img src="{{article.Thumbnail}}" alt="{{article.Title}}" />
 			</div>
 			<div class="vision-metadata">
 				<a class="vision-title" href="/pixivision/a/{{article.ID}}">
-					{{article.Title}}
+					{{-article.Title}}
 				</a>
 				<div class="vision-metadata-other">
 					<div class="tag-list">
-						{{ range _, tag := article.Tags }}
+						{{- range _, tag := article.Tags }}
 						<a href="/pixivision/tag/{{tag.ID}}">#{{tag.Name}}</a>
-						{{ end }}
+						{{- end }}
 					</div>
 					<div>
 						<div>{{parseTimeCustomFormat(article.Date, "2006-01-02")}}</div>
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 		</div>
-		{{ end }}
+		{{- end }}
 	</div>
 </div>
-{{ end }}
+{{- end }}
