--- a/assets/views/components/ranking-tn.jet.html
+++ b/assets/views/components/ranking-tn.jet.html
@@ -1,5 +1,5 @@
-{{ range . }}
-{{ target := CookieList["pixivfe-ThumbnailToNewTab"] }}
+{{- range . }}
+{{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
 <div class="artwork-small artwork">
 
   <div class="artwork-image">
@@ -9,12 +9,12 @@
 
     <div class="artwork-additional">
       <div class="artwork-position">{{ .Rank }}</div>
-      {{ if .Pages > 1 }}
+      {{- if .Pages > 1 }}
       <div class="artwork-page-count"><span>&boxbox; {{ .Pages }}</span></div>
-      {{ end }}
-      {{ if .IllustType == 2 }}
+      {{- end }}
+      {{- if .IllustType == 2 }}
       <div class="artwork-page-count"><span>&#9654;</span></div>
-      {{ end }}
+      {{- end }}
     </div>
   </div>
   <div class="artwork-title">
@@ -25,4 +25,4 @@
       <span>{{ .ArtistName }}</span></a>
   </div>
 </div>
-{{ end }}
+{{- end }}
