--- a/assets/views/error.jet.html
+++ b/assets/views/error.jet.html
@@ -1,13 +1,13 @@
-{{ extends "layout/default" }}
-{{ block body() }}
+{{- extends "layout/default" }}
+{{- block body() }}
 <div class="container error">
     <h1>An error occured</h1>
     <p>This is what you got instead ¯\_(ツ)_/¯</p>
     <br />
-    {{ .Error }}
+    {{- .Error }}
     <hr />
     <p>If you think this error should not occur, you can help
         us by submitting an issue to the <a href="https://codeberg.org/VnPower/PixivFE/issues/new">upstream repository</a>!
     </p>
 </div>
-{{ end }}
+{{- end }}
