--- a/assets/views/unauthorized.jet.html
+++ b/assets/views/unauthorized.jet.html
@@ -1,8 +1,8 @@
-{{ extends "layout/default" }}
-{{ block body() }}
+{{- extends "layout/default" }}
+{{- block body() }}
 <div class="container error">
     <h1>Unauthorized</h1>
 
     <p>You need to <a href="/settings#login">log in</a> to use this feature.</p>
 </div>
-{{ end }}
+{{- end }}
