--- a/assets/views/user.jet.html
+++ b/assets/views/user.jet.html
@@ -1,12 +1,12 @@
-{{ extends "layout/default" }}
-{{ block body() }}
-{{ if ! .User.BackgroundImage }}
+{{- extends "layout/default" }}
+{{- block body() }}
+{{- if ! .User.BackgroundImage }}
 <div class="background-cover"></div>
-{{ else }}
+{{- else }}
 <div class="background-cover" id="hasbg">
   <img src="{{ .User.BackgroundImage }}" alt="{{ .User.Name }}" />
 </div>
-{{ end }}
+{{- end }}
 <div class="container user">
   <div class="user-avatar">
     <img src="{{.User.Avatar}}" alt="Avatar Of User">
@@ -19,33 +19,33 @@
     </div>
     <small> {{ .User.Following }} Following | {{ .User.MyPixiv }} MyPixiv </small>
     <div class="user-social">
-      {{ if .User.Webpage }}
+      {{- if .User.Webpage }}
       <span><a href="{{ .User.Webpage }}"><img src="/img/globe.png" alt="Webpage" /></a></span>
-      {{ end }} {{ range index, item := .User.Social }}
+      {{- end }} {{ range index, item := .User.Social }}
       <span>
         <a href="{{ item.url }}">
           <img src="/img/{{ index }}.svg" alt="{{ index }}" />
         </a>
       </span>
-      {{ end }}
+      {{- end }}
     </div>
     <p>{{ raw: parsePixivRedirect(.User.Comment) }}</p>
   </div>
   <div>Frequently Used Tags</div>
   <div class="tag-list">
-    {{ range .User.FrequentTags }}
+    {{- range .User.FrequentTags }}
     <a href="/tags/{{ .Name }}">
       #{{ .Name }}
       {* <div>
-        {{ if ! .TranslatedName }}
+        {{- if ! .TranslatedName }}
         <div class="main">{{ .Name }}</div>
-        {{ else }}
+        {{- else }}
         <div class="main">{{ .TranslatedName }}</div>
         <div class="sub">#{{ .Name }}</div>
-        {{ end }}
+        {{- end }}
       </div> *}
     </a>
-    {{ end }}
+    {{- end }}
   </div>
   <div class="switcher">
     <div class="switch-title">Category</div>
@@ -56,32 +56,32 @@
     <a href="/users/{{ .User.ID }}/bookmarks#checkpoint" class="switch-button">Bookmarks</a>
   </div>
   <div>
-    {{ if .Category != "novels" }}
+    {{- if .Category != "novels" }}
     <div class="artwork-container-header">
       <h2 id="checkpoint">Illustrations and Mangas</h2>
-      {{ combinedUrl := "/artworks-multi/" + joinArtworkIds(.User.Artworks) }}
+      {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.User.Artworks) }}
       <div class="artwork-actions"><a href="{{combinedUrl}}">View all art on this page</a></div>
     </div>
     <div class="artwork-container">
-      {{ include "components/small-tn" .User.Artworks }}
+      {{- include "components/small-tn" .User.Artworks }}
     </div>
-    {{ else }}
+    {{- else }}
 
     <div class="artwork-container-header">
       <h2 id="checkpoint">Novels</h2>
     </div>
     <div class="novel-container">
-      {{ range .User.Novels }}
-      {{ include "components/novel-tn" . }}
-      {{ end }}
+      {{- range .User.Novels }}
+      {{- include "components/novel-tn" . }}
+      {{- end }}
     </div>
-    {{ end }}
+    {{- end }}
   </div>
   <div class="pagination">
-    {{ url := "/users/" + .User.ID + "/" + .Category + "?page="}}
+    {{- url := "/users/" + .User.ID + "/" + .Category + "?page="}}
     <small>Page {{ .Page }}/{{ .PageLimit }}</small>
     <br />
-    {{ raw: createPaginator(url, "#checkpoint", .Page, .PageLimit) }}
+    {{- raw: createPaginator(url, "#checkpoint", .Page, .PageLimit) }}
   </div>
 </div>
-{{ end }}
+{{- end }}
