--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -12,7 +12,7 @@
   {{ end -}}
   <title>{{ title }}</title>
 
-  <link href="/favicon.ico" rel="icon" />
+  <link href="/img/favicon.png" rel="icon" />
   <link href="/css/style.css" rel="stylesheet" />
 
   <meta name="htmx-config" content='{"includeIndicatorStyles":false}'>
