--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -84,7 +84,7 @@
           </div>
         </span>
         <a class="navbar-brand" href="/">
-          <img src="/img/favicon.ico" alt="PixivFE icon" />
+          <img src="/img/favicon.png" alt="PixivFE icon" />
           <span>PixivFE</span>
         </a>
       </span>
