--- a/assets/views/components/small-tn.jet.html
+++ b/assets/views/components/small-tn.jet.html
@@ -1,14 +1,12 @@
 {{- range . }} {{ if .ID == "#" }}
 <div class="artwork-small artwork">
-  <img src="{{ .Thumbnail }}" alt="{{ .Title }}" loading="lazy" />
+  <img src="/img/404.png" alt="{{ .Title }}" loading="lazy" />
   <div class="artwork-title">
     <a>{{ .Title }}</a>
   </div>
   <div class="artwork-author">
-    <a
-      ><img src="{{ .Thumbnail }}" alt="{{ .ArtistName }}" loading="lazy" />
-      <span>{{ .ArtistName }}</span></a
-    >
+    <a><img src="/img/404.png" alt="{{ .ArtistName }}" loading="lazy" />
+      <span>{{ .ArtistName }}</span></a>
   </div>
 </div>
 {{- else if .ID }}
